javascript play audio exercise

--- a/index.html
+++ b/index.html
@@ -17,6 +17,50 @@
       <audio controls="controls" id="drums1" loop>
         <source src="tracks/drums1.wav" type="audio/wav">
       </audio>
+      <h3 class="track-name">Drums 2</h3>
+      <audio controls="controls" id="drums2" loop>
+        <source src="tracks/drums2.wav" type="audio/wav">
+      </audio>
+      <h3 class="track-name">Drums 3</h3>
+      <audio controls="controls" id="drums3" loop>
+        <source src="tracks/drums3.wav" type="audio/wav">
+      </audio>
+      <h3 class="track-name">Drums 4</h3>
+      <audio controls="controls" id="drums4" loop>
+        <source src="tracks/drums4.wav" type="audio/wav">
+      </audio>
+      <h3 class="track-name">Drums 5</h3>
+      <audio controls="controls" id="drums5" loop>
+        <source src="tracks/drums5.wav" type="audio/wav">
+      </audio>
+      <h3 class="track-name">Drums 6</h3>
+      <audio controls="controls" id="drums6" loop>
+        <source src="tracks/drums6.wav" type="audio/wav">
+      </audio>
+      <h3 class="track-name">Entertain</h3>
+      <audio controls="controls" id="entertain" loop>
+        <source src="tracks/entertain.wav" type="audio/wav">
+      </audio>
+      <h3 class="track-name">Annoy</h3>
+      <audio controls="controls" id="annoy">
+        <source src="tracks/annoy.wav" type="audio/wav">
+      </audio>
+      <h3 class="track-name">Didgi 1</h3>
+      <audio controls="controls" id="didgi1" loop>
+        <source src="tracks/didgi1.wav" type="audio/wav">
+      </audio>
+      <h3 class="track-name">Didgi 2</h3>
+      <audio controls="controls" id="didgi2" loop>
+        <source src="tracks/didgi2.wav" type="audio/wav">
+      </audio>
+      <h3 class="track-name">Didgi 3</h3>
+      <audio controls="controls" id="didgi3" loop>
+        <source src="tracks/didgi3.wav" type="audio/wav">
+      </audio>
+      <h3 class="track-name">Didgi 4</h3>
+      <audio controls="controls" id="didgi4" loop>
+        <source src="tracks/didgi4.wav" type="audio/wav">
+      </audio>
     </div>
     <div class="right-col">
       <div class="record">
